Add funding intervals (1h 4h 8h)